
[TestParseJSXNoErrors/SelfClosingNoAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        SelfClose: true,
        span: 1:1-1:8,
    },
    span: 1:1-1:8,
}
---

[TestParseJSXNoErrors/NoAttrsNoChildren - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        span: 1:1-1:6,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:8-1:11,
        },
        span: 1:6-1:12,
    },
    span: 1:1-1:12,
}
---

[TestParseJSXNoErrors/SelfClosingAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 1:11-1:12,
                        },
                        span: 1:11-1:12,
                    },
                    span: 1:10-1:13,
                },
                span: 1:6-1:13,
            },
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXString{
                    Value: "hello",
                    span: 1:18-1:25,
                },
                span: 1:14-1:25,
            },
        },
        SelfClose: true,
        span: 1:1-1:28,
    },
    span: 1:1-1:28,
}
---

[TestParseJSXNoErrors/AttrsNoChildren - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 1:11-1:12,
                        },
                        span: 1:11-1:12,
                    },
                    span: 1:10-1:13,
                },
                span: 1:6-1:13,
            },
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXString{
                    Value: "hello",
                    span: 1:18-1:25,
                },
                span: 1:14-1:25,
            },
        },
        span: 1:1-1:26,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:28-1:31,
        },
        span: 1:26-1:32,
    },
    span: 1:1-1:32,
}
---

[TestParseJSXNoErrors/ChildElements - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "div",
            span: 1:2-1:5,
        },
        span: 1:1-1:6,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "div",
            span: 1:31-1:34,
        },
        span: 1:29-1:35,
    },
    Children: []ast.JSXChild{
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Ident{
                    Name: "span",
                    span: 1:7-1:11,
                },
                span: 1:6-1:12,
            },
            Closing: &ast.JSXClosing{
                Name: &ast.Ident{
                    Name: "span",
                    span: 1:19-1:23,
                },
                span: 1:17-1:24,
            },
            Children: []ast.JSXChild{
                &ast.JSXText{
                    Value: "hello",
                    span: 1:12-1:17,
                },
            },
            span: 1:6-1:24,
        },
        &ast.JSXText{
            Value: "world",
            span: 1:24-1:29,
        },
    },
    span: 1:1-1:35,
}
---

[TestParseJSXNoErrors/ChildExpr - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "div",
            span: 1:2-1:5,
        },
        span: 1:1-1:6,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "div",
            span: 1:20-1:23,
        },
        span: 1:18-1:24,
    },
    Children: []ast.JSXChild{
        &ast.JSXText{
            Value: "hello, ",
            span: 1:6-1:13,
        },
        &ast.JSXExprContainer{
            Expr: &ast.IdentExpr{
                Name: "msg",
                span: 1:14-1:17,
            },
            span: 1:13-1:18,
        },
    },
    span: 1:1-1:24,
}
---

[TestParseJSXNoErrors/Nesting - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "div",
            span: 1:2-1:5,
        },
        span: 1:1-1:6,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Ident{
            Name: "div",
            span: 1:28-1:31,
        },
        span: 1:26-1:32,
    },
    Children: []ast.JSXChild{
        &ast.JSXExprContainer{
            Expr: &ast.JSXElementExpr{
                Opening: &ast.JSXOpening{
                    Name: &ast.Ident{
                        Name: "span",
                        span: 1:8-1:12,
                    },
                    span: 1:7-1:13,
                },
                Closing: &ast.JSXClosing{
                    Name: &ast.Ident{
                        Name: "span",
                        span: 1:20-1:24,
                    },
                    span: 1:18-1:25,
                },
                Children: []ast.JSXChild{
                    &ast.JSXExprContainer{
                        Expr: &ast.IdentExpr{
                            Name: "foo",
                            span: 1:14-1:17,
                        },
                        span: 1:13-1:18,
                    },
                },
                span: 1:7-1:25,
            },
            span: 1:6-1:26,
        },
    },
    span: 1:1-1:32,
}
---

[TestParseJSXNoErrors/Fragment - 1]
&ast.JSXFragmentExpr{
    Opening: &ast.JSXOpening{
        span: 1:1-1:3,
    },
    Closing: &ast.JSXClosing{
        span: 1:17-1:20,
    },
    Children: []ast.JSXChild{
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Ident{
                    Name: "Foo",
                    span: 1:4-1:7,
                },
                SelfClose: true,
                span: 1:3-1:10,
            },
            span: 1:3-1:10,
        },
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Ident{
                    Name: "Bar",
                    span: 1:11-1:14,
                },
                SelfClose: true,
                span: 1:10-1:17,
            },
            span: 1:10-1:17,
        },
    },
    span: 1:1-1:20,
}
---

[TestParseJSXErrors/MissingEqualsInStringAttr - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                span: 1:6-1:9,
            },
        },
        span: 1:1-1:17,
    },
    Closing: &ast.JSXClosing{
        span: 1:20-1:20,
    },
    Children: []ast.JSXChild{
        &ast.JSXText{
            Value: " />",
            span: 1:17-1:20,
        },
    },
    span: 1:1-1:20,
}
---

[TestParseJSXErrors/MissingEqualsInExprAttr - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                span: 1:6-1:9,
            },
        },
        SelfClose: true,
        span: 1:1-1:16,
    },
    span: 1:1-1:16,
}
---

[TestParseJSXErrors/MissingEqualsInStringAttr - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:10-1:17,
        Message: "Expected '>' or '/>'",
    },
    &parser.Error{
        Span: 1:20-1:20,
        Message: "Expected '</'",
    },
    &parser.Error{
        Span: 1:20-1:20,
        Message: "Expected an identifier or '>'",
    },
    &parser.Error{
        Span: 1:20-1:20,
        Message: "Expected '>'",
    },
}
---

[TestParseJSXErrors/MissingEqualsInExprAttr - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1:11-1:12,
        Message: "Expected '...' for spread attribute",
    },
}
---

[TestParseJSXNoErrors/MultipleLines - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 2:8-2:9,
                        },
                        span: 2:8-2:9,
                    },
                    span: 2:7-2:10,
                },
                span: 2:3-2:10,
            },
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXString{
                    Value: "hello",
                    span: 3:7-3:14,
                },
                span: 3:3-3:14,
            },
        },
        SelfClose: true,
        span: 1:1-4:3,
    },
    span: 1:1-4:3,
}
---

[TestParseJSXNoErrors/BooleanShorthandWithOtherAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "input",
            span: 1:2-1:7,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "name",
                Value: &&ast.JSXString{
                    Value: "foo",
                    span: 1:13-1:18,
                },
                span: 1:8-1:18,
            },
            &ast.JSXAttr{
                Name: "disabled",
                span: 1:19-1:27,
            },
            &ast.JSXAttr{
                Name: "checked",
                span: 1:28-1:35,
            },
        },
        SelfClose: true,
        span: 1:1-1:38,
    },
    span: 1:1-1:38,
}
---

[TestParseJSXNoErrors/MultipleSpreadAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props1",
                    span: 1:10-1:16,
                },
                span: 1:6-1:17,
            },
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props2",
                    span: 1:22-1:28,
                },
                span: 1:18-1:29,
            },
        },
        SelfClose: true,
        span: 1:1-1:32,
    },
    span: 1:1-1:32,
}
---

[TestParseJSXNoErrors/BooleanShorthand - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "input",
            span: 1:2-1:7,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "disabled",
                span: 1:8-1:16,
            },
        },
        SelfClose: true,
        span: 1:1-1:19,
    },
    span: 1:1-1:19,
}
---

[TestParseJSXNoErrors/SpreadAttrOnly - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props",
                    span: 1:10-1:15,
                },
                span: 1:6-1:16,
            },
        },
        SelfClose: true,
        span: 1:1-1:19,
    },
    span: 1:1-1:19,
}
---

[TestParseJSXNoErrors/SpreadWithRegularAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props",
                    span: 1:10-1:15,
                },
                span: 1:6-1:16,
            },
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 1:22-1:23,
                        },
                        span: 1:22-1:23,
                    },
                    span: 1:21-1:24,
                },
                span: 1:17-1:24,
            },
        },
        SelfClose: true,
        span: 1:1-1:27,
    },
    span: 1:1-1:27,
}
---

[TestParseJSXNoErrors/SpreadBetweenRegularAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Ident{
            Name: "Foo",
            span: 1:2-1:5,
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "bar",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 1:11-1:12,
                        },
                        span: 1:11-1:12,
                    },
                    span: 1:10-1:13,
                },
                span: 1:6-1:13,
            },
            &ast.JSXSpreadAttr{
                Expr: &ast.IdentExpr{
                    Name: "props",
                    span: 1:18-1:23,
                },
                span: 1:14-1:24,
            },
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXString{
                    Value: "hello",
                    span: 1:29-1:36,
                },
                span: 1:25-1:36,
            },
        },
        SelfClose: true,
        span: 1:1-1:39,
    },
    span: 1:1-1:39,
}
---

[TestParseJSXNoErrors/MemberExprSelfClosing - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 1:2-1:5,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 1:6-1:9,
            },
        },
        SelfClose: true,
        span: 1:1-1:12,
    },
    span: 1:1-1:12,
}
---

[TestParseJSXNoErrors/MemberExprWithAttrs - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 1:2-1:5,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 1:6-1:9,
            },
        },
        Attrs: []ast.JSXAttrElem{
            &ast.JSXAttr{
                Name: "baz",
                Value: &&ast.JSXExprContainer{
                    Expr: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 5,
                            span: 1:15-1:16,
                        },
                        span: 1:15-1:16,
                    },
                    span: 1:14-1:17,
                },
                span: 1:10-1:17,
            },
        },
        SelfClose: true,
        span: 1:1-1:20,
    },
    span: 1:1-1:20,
}
---

[TestParseJSXNoErrors/MemberExprInFragment - 1]
&ast.JSXFragmentExpr{
    Opening: &ast.JSXOpening{
        span: 1:1-1:3,
    },
    Closing: &ast.JSXClosing{
        span: 1:25-1:28,
    },
    Children: []ast.JSXChild{
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Member{
                    Left: &ast.Ident{
                        Name: "Foo",
                        span: 1:4-1:7,
                    },
                    Right: &ast.Ident{
                        Name: "Bar",
                        span: 1:8-1:11,
                    },
                },
                SelfClose: true,
                span: 1:3-1:14,
            },
            span: 1:3-1:14,
        },
        &ast.JSXElementExpr{
            Opening: &ast.JSXOpening{
                Name: &ast.Member{
                    Left: &ast.Ident{
                        Name: "Baz",
                        span: 1:15-1:18,
                    },
                    Right: &ast.Ident{
                        Name: "Qux",
                        span: 1:19-1:22,
                    },
                },
                SelfClose: true,
                span: 1:14-1:25,
            },
            span: 1:14-1:25,
        },
    },
    span: 1:1-1:28,
}
---

[TestParseJSXNoErrors/DeepMemberExpr - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Member{
            Left: &ast.Member{
                Left: &ast.Ident{
                    Name: "Foo",
                    span: 1:2-1:5,
                },
                Right: &ast.Ident{
                    Name: "Bar",
                    span: 1:6-1:9,
                },
            },
            Right: &ast.Ident{
                Name: "Baz",
                span: 1:10-1:13,
            },
        },
        SelfClose: true,
        span: 1:1-1:16,
    },
    span: 1:1-1:16,
}
---

[TestParseJSXNoErrors/MemberExprWithChildren - 1]
&ast.JSXElementExpr{
    Opening: &ast.JSXOpening{
        Name: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 1:2-1:5,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 1:6-1:9,
            },
        },
        span: 1:1-1:10,
    },
    Closing: &ast.JSXClosing{
        Name: &ast.Member{
            Left: &ast.Ident{
                Name: "Foo",
                span: 1:17-1:20,
            },
            Right: &ast.Ident{
                Name: "Bar",
                span: 1:21-1:24,
            },
        },
        span: 1:15-1:25,
    },
    Children: []ast.JSXChild{
        &ast.JSXText{
            Value: "hello",
            span: 1:10-1:15,
        },
    },
    span: 1:1-1:25,
}
---
